--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
