--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "font-applesdgothicneo": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "recoil": "^0.7.6",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0"
